benchmark with testcontainers